Scrollbar fixes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,6 +23,10 @@
         padding: 18px 24px;
         background: #364857;
         height: 100%;
+
+        //height: 1000px;
+        overflow-x: hidden;
+        position: relative;
     }
 }
 
