--- a/src/app/expenses/expenses.component.scss
+++ b/src/app/expenses/expenses.component.scss
@@ -13,3 +13,7 @@ h5 {
     width: auto;
     padding: 4%;
 }
+
+.footer {
+    height: 10vh;
+}
