--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 @import "~hamburgers/_sass/hamburgers/hamburgers.scss";
-@import '~ngx-toastr/toastr';
+@import "~ngx-toastr/toastr";
 
 .navbar {
     //display: flex;
-    background: #364857;// #3b8686;
+    background: #364857; // #3b8686;
     font-size: large;
 }
 
@@ -14,7 +14,7 @@
 
 html,
 body {
-   height: 100%;
+    height: 100%;
 }
 body {
     //display: flex;
@@ -22,4 +22,6 @@ body {
     font-family: OCR A Std, monospace;
     font-size: medium;
     margin-top: 3.5%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
